# hnurm26_RegistrationNode

./: .gitignore  OLD.md  README.md
src/hnurm_interfaces/: CMakeLists.txt
src/hnurm_interfaces/msg/uart/: Gesture.msg  VisionRecvData.msg  VisionSendData.msg
src/registration/: CMakeLists.txt  package.xml
src/registration/include/: registration_node.hpp
src/registration/include/registration/: res.hpp
src/registration/launch/: registration.launch.py  registration_rviz.launch.py
src/registration/map/: downtest.pcd
src/registration/params/: default.yaml
src/registration/rviz/: relocalization_view.rviz
src/registration/src/: main.cpp  registration_node.cpp  res.cpp
